--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,7 +6,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #03a9f4;
+  --ifm-color-primary: #FF9975;
   --ifm-color-primary-dark: #039be5;
   --ifm-color-primary-darker: #0288d1;
   --ifm-color-primary-darkest: #0277bd;
